[CST-10911] added authority configurations

--- a/dspace/config/modules/authority.cfg
+++ b/dspace/config/modules/authority.cfg
@@ -69,6 +69,7 @@ authority.minconfidence = ambiguous
  
 #####  Authority Control Settings  #####
 #plugin.named.org.dspace.content.authority.ChoiceAuthority = \
+# org.dspace.content.authority.SolrSuggestAuthority = SolrSuggestAuthority, \
 # org.dspace.content.authority.SampleAuthority = Sample, \
 # org.dspace.content.authority.SHERPARoMEOPublisher = SRPublisher, \
 # org.dspace.content.authority.SHERPARoMEOJournalTitle = SRJournalTitle, \
@@ -86,3 +87,11 @@ org.dspace.content.authority.EPersonAuthority = EPersonAuthority
 #choices.plugin.dspace.object.owner = EPersonAuthority
 #choices.presentation.dspace.object.owner = suggest
 #authority.controlled.dspace.object.owner = true
+
+###Example to use SolrSuggestAuthority
+# choices.plugin.dc.subject = SolrSuggestAuthority
+# choices.presentation.dc.subject = suggest
+# authority.controlled.dc.subject = true
+#Remind that SolrSuggestAuthority append _ac to the name of facet
+# SolrSuggestAuthority.dc_subject.facetname = subject
+
